# lfuda-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
common/: error.h  memutil.h
lfuda/: CMakeLists.txt
lfuda/include/: cache.h  dllist.h  dump.h  hashtab.h  lfu.h  lfuda.h  rbtree.h
lfuda/src/: basecache.c  basecache.h  clist.c  clist.h  dllist.c  dllist.h  dump.c  dump.h  hashtab.c  lfu.c  lfuda.c  rbtree.c
test/: CMakeLists.txt
test/hsht/: CMakeLists.txt
test/hsht/src/: hsht.cc
test/hshtend/: .gitignore  CMakeLists.txt  test.sh
test/hshtend/src/: counter.c  counter.h  main.c  spair.c  spair.h  util.c  util.h
test/lfuc/: CMakeLists.txt
test/lfuc/src/: lfuc.c
test/lfudac/: CMakeLists.txt  test.sh  testgen.py
test/lfudac/src/: lfudac.c
test/rbt/: CMakeLists.txt
test/rbt/src/: rbt.c  rbt.cc
test/tl/: CMakeLists.txt
test/tl/src/: tl.cc
util/dump/: CMakeLists.txt
util/dump/src/: dump.c
